[package]
name = "geocal"
description = "A command line tool displaying a calendar and ephemeris of a geodate"
version = "0.1.0"
license = "MIT"
authors = ["Vincent Ollivier <v@vinc.cc>"]
edition = "2018"
repository = "https://github.com/vinc/geocal"
readme = "README.md"

[dependencies]
colored = "2.0"
geodate = "0.4.0"
